try to make reg

--- a/templates/account.html
+++ b/templates/account.html
@@ -11,8 +11,8 @@
       <div class="popup__close-area close-popup"></div>
         <div class="popup__content">
             <span class="popup__title">День добрый</span>
-            <a href="{{ url_for('entrance_page') }}">Войти</a>
-            <a href="{{ url_for('registration_page') }}">Зарегистрироваться</a>
+            <a href="">Войти</a>
+            <a href="">Зарегистрироваться</a>
         </div>
        </div>
     </div>
