--- a/templates/home.html
+++ b/templates/home.html
@@ -28,7 +28,7 @@
             <div class="container">
                 <a class="header_logo hover" href="home.html" id="logo">C R E D O</a>
                 <ul class="header_list" id="menu">
-                    <a href="{{ url_for('shoes_page') }}" class="header_menu"><li>Обувь</li></a>
+                    <a href='shoes_page' class="header_menu"><li>Обувь</li></a>
                     <a href="" class="header_menu"><li>Штаны</li></a>
                     <a href="" class="header_menu"><li>Худи</li></a>
                     <a href="" class="header_menu"><li>Куртки</li></a>
@@ -36,7 +36,7 @@
                 </ul>
             </div>
             <div class="header_registration">
-                <a class="header_account-icon_link" href="{{ url_for('account_page') }}"><img class="header_account-icon" src="/static/img/user.png" alt="sign-up"></a>
+                <a class="header_account-icon_link" href='account_page'><img class="header_account-icon" src="/static/img/user.png" alt="sign-up"></a>
             </div>
             <div id="header_shadow" class="header_shadow"></div>
         </div>
