--- a/templates/account.html
+++ b/templates/account.html
@@ -1,9 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="../credo/static/styles/account.css">
+    <link rel="stylesheet" href="{% static 'styles/account.css' %}">
 </head>
 <body>
 <div class="popup" id="popup">
@@ -11,8 +12,8 @@
         <div class="popup__close-area close-popup"></div>
         <div class="popup__content">
             <span class="popup__title">День добрый</span>
-            <a href="entrance.html">Войти</a>
-            <a href="registration.html">Зарегистрироваться</a>
+            <a href="{% url 'entrance' %}">Войти</a>
+            <a href="{% url 'registration' %}">Зарегистрироваться</a>
         </div>
     </div>
 </div>
