--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="shortcut icon" href="/img/shortlogoC.png" type="image/png">
+    <link rel="shortcut icon" href="{% static 'img/shortlogoC.png' %}" type="image/png">
     <title>Официальный сайт Сredo</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -48,7 +48,7 @@
                 </ul>
             </div>
             <div class="header_registration">
-                <a class="header_account-icon_link" href='account.html'><img class="header_account-icon"
+                <a class="header_account-icon_link" href="{% url 'account' %}"><img class="header_account-icon"
                                                                              src="{% static 'img/user.png' %}"
                                                                              alt="sign-up"></a>
             </div>
@@ -63,16 +63,16 @@
                 <img src="{% static 'img/prev.png' %}" alt="">
             </div>
             <div class="slide showSlide">
-                <img class="slide_img" src="../credo/static/img/img1.0.jpg" alt="">
+                <img class="slide_img" src="{% static 'img/img1.jpg' %}" alt="">
             </div>
             <div class="slide">
-                <img class="slide_img" src="../credo/static/img/img2.jpg" alt="">
+                <img class="slide_img" src="{% static 'img/img2.jpg' %}" alt="">
             </div>
             <div class="slide">
-                <img class="slide_img" src="../credo/static/img/img3.jpg" alt="">
+                <img class="slide_img" src="{% static 'img/img3.jpg' %}" alt="">
             </div>
             <div class="slide">
-                <img class="slide_img" src="../credo/static/img/img4.jpg" alt="">
+                <img class="slide_img" src="{% static 'img/img4.jpg' %}" alt="">
             </div>
             <div class="slider-btns nextBtn">
                 <img src="{% static 'img/next.png' %}" alt="">
