--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,9 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="../credo/static/styles/account.css">
+    <link rel="stylesheet" href="{% static 'styles/account.css' %}">
 </head>
 <body>
 <div class="page">
