--- a/templates/account.html
+++ b/templates/account.html
@@ -13,7 +13,7 @@
         <div class="popup__content">
             <span class="popup__title">День добрый</span>
             <a href="{% url 'entrance' %}">Войти</a>
-            <a href="{% url 'registration' %}">Зарегистрироваться</a>
+            <a href="{% url 'register' %}">Зарегистрироваться</a>
         </div>
     </div>
 </div>
