--- a/templates/account.html
+++ b/templates/account.html
@@ -11,9 +11,30 @@
     <div class="popup__body">
         <div class="popup__close-area close-popup"></div>
         <div class="popup__content">
-            <span class="popup__title">День добрый</span>
-            <a href="{% url 'entrance' %}">Войти</a>
-            <a href="{% url 'register' %}">Зарегистрироваться</a>
+            <form method="post">
+                {% csrf_token %}
+                <div class="popup__field">
+                    <label class="popup__label" for="username">Имя пользователя:</label>
+                    <input class="popup__input" type="text" id="username" name="username" value="{{ user.username }}">
+                </div>
+                <div>
+                    <label for="phone_number">Номер телефона:</label>
+                    <input type="tel" id="phone_number" name="phone_number" value="{{ user.phone_number }}">
+                </div>
+                <div>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" value="{{ user.email }}" readonly>
+                </div>
+                <div>
+                    <label for="new_password">Новый пароль:</label>
+                    <input type="password" id="password" name="new_password">
+                </div>
+                <div>
+                    <label for="new_password">Повторите пароль:</label>
+                    <input type="password" id="password" name="confirm_password">
+                </div>
+                <button type="submit">Изменить</button>
+            </form>
         </div>
     </div>
 </div>
